# obsidian-to-appflowy

./: .gitignore  README.md  pyproject.toml
example_vault/: 01_headings.md  02_inline_formatting.md  03_lists.md  04_nested_lists.md  05_tasks.md  06_blockquotes.md  07_code.md  08_tables.md  09_links.md  10_frontmatter.md  11_dividers.md  12_images.md  13_clipper_style.md
example_vault/subfolder/: nested_page.md
obsidian_to_appflowy/: __init__.py  __main__.py  cli.py  converter.py  importer.py
tests/: test_converter.py  test_importer.py
