[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-to-appflowy"
version = "1.0.2"
description = "Migrate your Obsidian vault to AppFlowy — structure, images, and tables included"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
obsidian-to-appflowy = "obsidian_to_appflowy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
